additional chapters and makefile

--- a/main.tex
+++ b/main.tex
@@ -40,6 +40,7 @@
 \begin{abstract}
 %% (At most 350 words for Ph.D.)
 
+Although we now routinely sequence human genomes, we cannot yet confidently identify functional variants. Here a deep mutational scanning framework is developed that combines random codon-mutagenesis and multiplexed functional variation assays with computational imputation and regularization to yield look-up tables for human missense variants. The framework is applied to five proteins corresponding to seven human genes: UBE2I (encoding SUMO E2 conjugase), SUMO1 (small ubiquitin-like modifier), NCS1 (neuronal calcium sensor 1), TPK1 (thiamin pyrophosphokinase), and CALM1/2/3 (three genes encoding the protein calmodulin). The resulting functional impact scores correspond to known protein features, and serve to confidently identify pathogenic variation. %Analysis of large-scale phenotypic screens suggests that assays potentially amenable to deep mutational scanning are already available for 57\% of human disease genes.
 \end{abstract}
 
 %\begin{dedication}
@@ -65,6 +66,12 @@ The author gratefully acknowledges funding by the National Institutes of Health,
 
 
 \include{introduction}
+
+\include{chapter1}
+
+\include{chapter2}
+
+\include{conclusion}
 
 %% This adds a line for the Bibliography in the Table of Contents.
 \addcontentsline{toc}{chapter}{Bibliography}
